Make sure the (?) button on content bubbles are aligned to the left margin.

Bug: 764318
Change-Id: Ic865e011ea14a135ac92637fecd08fcab77bbdfb
Reviewed-on: https://chromium-review.googlesource.com/667757
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502583}
Former-commit-id: be9cca689d4b5e6e8786948596ece07b76b30d67